@@ -1,13 +1,13 @@
 {
-  "timestamp" : "2022-08-25T08:13:01Z",
+  "timestamp" : "2022-08-26T08:11:41Z",
   "count_outdated" : 1872,
   "uniques_outdated" : 132,
-  "count" : 1908,
+  "count" : 1894,
   "uniques" : 135,
   "views" : [
     {
       "timestamp": "2022-08-12T00:00:00Z",
-      "count": 24,
+      "count": 10,
       "count_minmax": [ 1, 24 ],
       "uniques": 2,
       "uniques_minmax": [ 1, 2 ]
