@@ -1,10 +1,10 @@
 {
-  "count": 36,
+  "count": 22,
   "uniques": 2,
   "views": [
     {
       "timestamp": "2022-08-12T00:00:00Z",
-      "count": 24,
+      "count": 10,
       "uniques": 2
     },
     {
