@@ -1,3 +1,10 @@
+2022-08-26T08:11:41Z:
+* notice: last 14d: unq all: 2 22
+* notice: prev accum: outdated-unq outdated-all / unq all: 132 1872 / 135 1908
+* notice: next accum: outdated-unq outdated-all / unq all: 132 1872 / 135 1894
+* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -14 / +2 +24 -0 -14 / 2 10
+* notice: removed / changed dates: [] / [2022-08-12]
+
 2022-08-25T08:13:01Z:
 * notice: last 14d: unq all: 2 36
 * notice: prev accum: outdated-unq outdated-all / unq all: 131 1871 / 135 1908
